# pypolaron

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
examples/: dft_setup.yaml  examples_generator.py  examples_workflow.py  policy.yaml
examples/polaron_runs/: polaron_report.json
examples/polaron_runs/charged/: control.in  geometry.in  run_aims.sh
examples/polaron_runs/pristine/: control.in  geometry.in  run_aims.sh
scripts/: main.py  run_polaron_generator.py
src/pypolaron/: __init__.py  formation_energy_calculator.py  polaron_analyzer.py  polaron_generator.py  thermodynamics.py  utils.py  workflow.py
src/pypolaron/cli/: common_utils.py
tests/: conftest.py  test_polaron_generator.py
