[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypolaron"
description = "Toolkit for automated polaron calculations"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Matteo Rinaldi", email = "mrinaldi@fhi-berlin.mpg.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "ase",
    "matscipy",
    "pymatgen",
    "pymatgen-analysis-defects",
    "pydefect",
    "pyfhiaims"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pypolaron.__version__"}

#[tool.setuptools]
#package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pypolaron", "pypolaron.*"]

[project.scripts]
run_generator = "pypolaron.bin.run_generator:main"
run_attractor = "pypolaron.bin.run_attractor:main"
run_pbeu_plus_hybrid = "pypolaron.bin.run_pbeu_plus_hybrid:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --color=yes --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
# register any custom markers to avoid pytest warnings:
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]